--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -1,4 +1,11 @@
-﻿<h1>To Do List</h1>
+﻿@using ToDoList.Models;
+
+<h1>To Do List</h1>
 <ul>
-  <li>@Model.Description</li>
+  @foreach (Item item in Model)
+  {
+    <li>@item.Description</li>
+  }
+
 </ul>
+<a href="/items/new">Add a new item.</a>
